Enhance toString methods by turning them into the formatted string representation